--- a/index.html
+++ b/index.html
@@ -22,22 +22,28 @@
         </div>  
     </div>
     <div id="content" class="bodyContent">
-        <button onClick="openLink('Website');">Website</button>
-        <button onClick="openLink('GitHub');">GitHub</button>
-        <button onClick="openLink('Instagram');">Instagram</button>
-        <button onClick="openLink('Twitter');">Twitter</button>
-        <button onClick="openLink('TikTok');">TikTok</button>
-        <button onClick="openLink('Snapchat');">Snapchat</button>
-        <button onClick="openLink('Discord');">Discord</button>
-        <button onClick="openLink('YouTube');">YouTube</button>
-        <button onClick="openLink('Reddit');">Reddit</button>
-        <button onClick="openLink('Spotify');">Spotify</button>
+        <button onClick="openLink('https://theflyingrat.com');">Website</button>
+        <button onClick="openLink('https://GitHub.com/theflyingrat');">GitHub</button>
+        <button onClick="openLink('https://Instagram.com/theflyingrat1');">Instagram</button>
+        <button onClick="openLink('https://Twitter.com/theflyingrat1');">Twitter</button>
+        <button onClick="openLink('https://TikTok.com/ratsey');">TikTok</button>
+        <button onClick="openLink('https://Snapchat.com/add/theflyingrat1');">Snapchat</button>
+        <button onClick="alert('TheFlyingRat#3387')">Discord</button>
+        <button onClick="openLink('https://YouTube.com/theflyingrat');">YouTube</button>
+        <button onClick="openLink('https://Reddit.com/loldude9876789');">Reddit</button>
+        <button onClick="openLink('https://open.spotify.com/user/m72ma1k7u45iz3mjg01p0000r?si=e61acd25247d4eef');">Spotify</button>
     </div>
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/css/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/css/skeleton.min.css">
     <link rel="stylesheet" href="assets/css/home.css">
     <style>body, html {display: block; opacity: 1}</style>
+    <script>console.log("DOM loaded");</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
     <script src="https://cdn.theflyingrat.com/assets/repository/main.js" defer></script>
+    <script defer>
+        function openLink(url) {
+            window.location.href = url;
+        }
+    </script>
 </body>
 </html
