--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         </div>  
     </div>
     <div id="content" class="bodyContent">
-        <button onClick="openLink('https://api.theflyingrat.com/redir?hash=c4878fa45e9c79002721f24df1bcd3763edf5bfd');">Website</button>
-        <button onClick="openLink('https://api.theflyingrat.com/redir?hash=4dda680a48cef4c45482fb58ebb60f5eea4866f3');">GitHub</button>
-        <button onClick="openLink('https://api.theflyingrat.com/redir?hash=d4b7c0f478213aa67ea7fc5f6c8ea82864c06275');">Instagram</button>
-        <button onClick="openLink('https://api.theflyingrat.com/redir?hash=3a985f15cd658ae5be9eeeb1f42b14fa5b143ea9');">Twitter</button>
-        <button onClick="openLink('https://api.theflyingrat.com/redir?hash=77db44fec3253531a46879102ec061bb3bdce5f8');">TikTok</button>
-        <button onClick="openLink('https://api.theflyingrat.com/redir?hash=890353cc27c6f051142f51ecceb1518f0013ff9e');">Snapchat</button>
+        <button onClick="openLink('hash=c4878fa45e9c79002721f24df1bcd3763edf5bfd');">Website</button>
+        <button onClick="openLink('hash=4dda680a48cef4c45482fb58ebb60f5eea4866f3');">GitHub</button>
+        <button onClick="openLink('hash=d4b7c0f478213aa67ea7fc5f6c8ea82864c06275');">Instagram</button>
+        <button onClick="openLink('hash=3a985f15cd658ae5be9eeeb1f42b14fa5b143ea9');">Twitter</button>
+        <button onClick="openLink('hash=77db44fec3253531a46879102ec061bb3bdce5f8');">TikTok</button>
+        <button onClick="openLink('hash=890353cc27c6f051142f51ecceb1518f0013ff9e');">Snapchat</button>
         <button onClick="alert('TheFlyingRat#3387')">Discord</button>
-        <button onClick="openLink('https://api.theflyingrat.com/redir?hash=02ea4823353e76214920eac5aface7bf4616263d');">YouTube</button>
-        <button onClick="openLink('https://api.theflyingrat.com/redir?hash=a909bf08665b07e03f3a46b78fb8ed84de53d228');">Reddit</button>
-        <button onClick="openLink('https://api.theflyingrat.com/redir?hash=7dab521a63d0eae7dcac96e631ced983b33450ef');">Spotify</button>
+        <button onClick="openLink('hash=02ea4823353e76214920eac5aface7bf4616263d');">YouTube</button>
+        <button onClick="openLink('hash=a909bf08665b07e03f3a46b78fb8ed84de53d228');">Reddit</button>
+        <button onClick="openLink('hash=7dab521a63d0eae7dcac96e631ced983b33450ef');">Spotify</button>
     </div>
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/css/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/css/skeleton.min.css">
@@ -42,7 +42,7 @@
     <script src="https://cdn.theflyingrat.com/assets/repository/main.js" defer></script>
     <script defer>
         function openLink(url) {
-            window.location.href = url;
+            window.location.href = "https://api.theflyingrat.com/redir?" + url;
         }
     </script>
 </body>
