add favicon and metas

--- a/index.html
+++ b/index.html
@@ -2,16 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="name" content="Links - TheFlyingRat">
+    <meta name="description" content="This page contains all of my social medias">
+    <meta name="keywords" content="TheFlyingRat, Joey M, Software Developer, Web Development, Scripting languages, The, Flying, Rat, socials, youtube, snapchat, github">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="application-name" content="Links - TheFlyingRat">
+    <meta name="theme-color" content="#1e1e1e">
+    <meta name="author" content="https://cdn.theflyingrat.com/humans.txt">
+    <meta property="og:title" content="Links - TheFlyingRat">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://links.theflyingrat.com">
+    <meta property="og:image" content="/logo512x512.png">
+    <link rel="manifest" href="https://cdn.theflyingrat.com/site.webmanifest">
+    <link rel="author" href="https://cdn.theflyingrat.com/humans.txt">
+    <link rel="icon" type="image/png" href="https://cdn.theflyingrat.com/favicon-32x32.png">
+    <link rel="icon" type="image/png" href="https://cdn.theflyingrat.com/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" as="script" href="https://cdn.theflyingrat.com/assets/repository/main.js">
     <link rel="preload" as="script" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
     <link rel="preload" as="style" href="https://cdn.theflyingrat.com/assets/css/normalize.min.css">
     <link rel="preload" as="style" href="https://cdn.theflyingrat.com/assets/css/skeleton.min.css">
-    <link rel="preload" as="image" href="assets/img/background/city.jpg">
-    <link rel="preload" as="style" href="assets/css/home.css">
+    <link rel="preload" as="image" href="https://cdn.theflyingrat.com/assets/links/assets/img/background/city.jpg">
+    <link rel="preload" as="style" href="https://cdn.theflyingrat.com/assets/links/assets/css/home.css">
     <style>body, html {display: none; opacity: 0}</style>
-    <title>Links</title>
+    <title>Links - TheFlyingRat</title>
 </head>
 <body class="noselect">
     <div id="header" class="bodyContent">
