--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body class="noselect">
     <div id="header" class="bodyContent">
         <div id="headerContainer">
-            <img draggable="false" src="assets/img/profile_small.webp" style="border: 2px solid #ccc; border-radius: 100px; image-rendering: smooth;" width="140px" height="140px">
+            <img alt="A photo of a flying rat" draggable="false" src="assets/img/profile_small.webp" style="border: 2px solid #ccc; border-radius: 100px; image-rendering: smooth;" width="140px" height="140px">
             <h1 style="margin-bottom: 2px; cursor: pointer;" onclick="window.location.href='https://theflyingrat.com'">Joey M</h1>
             <h5>Victoria, Australia</h5>
         </div>  
