wowow fix dumbass mistake

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/css/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/css/skeleton.min.css">
-    <link rel="stylesheet" href="assets/css/home.css">
+    <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/links/assets/css/home.css">
     <style>body, html {display: block; opacity: 1}</style>
     <script>console.log("DOM loaded");</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
