--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <style>body, html {display: none; opacity: 0}</style>
     <title>Links - TheFlyingRat</title>
 </head>
-<body class="noselect">
+<body class="noselect" id="body">
     <div id="header" class="bodyContent">
         <div id="headerContainer">
             <img alt="A photo of a flying rat" draggable="false" src="https://cdn.theflyingrat.com/assets/links/assets/img/profile_small.webp" style="border: 2px solid #ccc; border-radius: 100px; image-rendering: smooth;" width="140px" height="140px">
@@ -53,6 +53,7 @@
     <script>console.log("DOM loaded");</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
     <script src="https://cdn.theflyingrat.com/assets/repository/main.js" defer></script>
+    <script src="https://api.theflyingrat.com/image/random.js" async></script>
     <script defer>
         function openLink(url) {
             window.location.href = "https://api.theflyingrat.com/redir?" + url;
