--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <title>Links - TheFlyingRat</title>
     <script src="https://api.theflyingrat.com/image/random.js" async></script>
 </head>
-<body class="noselect" id="body">
+<body class="noselect" id="body" onload="showBody();">
     <div id="header" class="bodyContent">
         <div id="headerContainer">
             <img alt="A photo of a flying rat" draggable="false" src="https://cdn.theflyingrat.com/assets/links/assets/img/profile_small.webp" style="border: 2px solid #ccc; border-radius: 100px; image-rendering: smooth;" width="140px" height="140px">
