--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="preload" as="style" href="https://cdn.theflyingrat.com/assets/css/skeleton.min.css">
     <link rel="preload" as="style" href="https://cdn.theflyingrat.com/assets/links/assets/css/home.css">
     <title>Links - TheFlyingRat</title>
-    <script src="https://api.theflyingrat.com/image/random.js" async></script>
+    <script src="https://cdn.theflyingrat.com/assets/links/assets/js/random.js" async></script>
 </head>
 <body class="noselect" id="body" onload="showBody();">
     <div id="header" class="bodyContent">
