--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="icon" type="image/png" href="https://cdn.theflyingrat.com/favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preload" as="script" href="https://cdn.theflyingrat.com/assets/repository/main.js">
+    <link rel="preload" as="script" href="https://cdn.theflyingrat.com/assets/links/assets/js/random.js">
     <link rel="preload" as="script" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
     <link rel="preload" as="style" href="https://cdn.theflyingrat.com/assets/css/normalize.min.css">
     <link rel="preload" as="style" href="https://cdn.theflyingrat.com/assets/css/skeleton.min.css">
