--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
     <link rel="preload" as="style" href="https://cdn.theflyingrat.com/assets/links/assets/css/home.css">
     <title>Links - TheFlyingRat</title>
     <script src="https://cdn.theflyingrat.com/assets/links/assets/js/random.min.js" async></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200;300&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
+    <script src="https://cdn.theflyingrat.com/assets/repository/main.js" defer></script>
 </head>
 <body class="noselect" id="body" onload="showBody();">
     <div id="header" class="bodyContent">
@@ -51,8 +56,6 @@
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/css/skeleton.min.css">
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/links/assets/css/home.css">
     <script>console.log("DOM loaded");</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
-    <script src="https://cdn.theflyingrat.com/assets/repository/main.js" defer></script>
     <script defer>
         function openLink(url) {
             window.location.href = "https://api.theflyingrat.com/redir?" + url;
