--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <style>html {display: none; opacity: 0}</style>
+    <link rel="preconnect" href="https://cdn.theflyingrat.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta name="name" content="Links - TheFlyingRat">
     <meta name="description" content="This page contains all of my social medias">
     <meta name="keywords" content="TheFlyingRat, Joey M, Software Developer, Web Development, Scripting languages, The, Flying, Rat, socials, youtube, snapchat, github">
@@ -25,12 +28,9 @@
     <link rel="preload" as="style" href="https://cdn.theflyingrat.com/assets/css/skeleton.min.css">
     <link rel="preload" as="style" href="https://cdn.theflyingrat.com/assets/links/assets/css/home.css">
     <title>Links - TheFlyingRat</title>
-    <script src="https://cdn.theflyingrat.com/assets/links/assets/js/random.min.js" async></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200;300&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" defer></script>
     <script src="https://cdn.theflyingrat.com/assets/repository/main.js" defer></script>
+    <script src="https://cdn.theflyingrat.com/assets/links/assets/js/random.min.js" async></script>
 </head>
 <body class="noselect" id="body" onload="showBody();">
     <div id="header" class="bodyContent">
@@ -55,6 +55,7 @@
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/css/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/css/skeleton.min.css">
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/links/assets/css/home.css">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@200;300&display=swap" rel="stylesheet">
     <script>console.log("DOM loaded");</script>
     <script defer>
         function openLink(url) {
