--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h5>Victoria, Australia</h5>
         </div>  
     </div>
-    <div id="content" class="bodyContent">
+    <div id="content" class="bodyContent" style="margin-bottom: 5%;">
         <button onClick="openLink('hash=c4878fa45e9c79002721f24df1bcd3763edf5bfd');">Website</button>
         <button onClick="openLink('hash=4dda680a48cef4c45482fb58ebb60f5eea4866f3');">GitHub</button>
         <button onClick="openLink('hash=d4b7c0f478213aa67ea7fc5f6c8ea82864c06275');">Instagram</button>
