--- a/indexNoMin.html
+++ b/indexNoMin.html
@@ -41,16 +41,16 @@
         </div>  
     </div>
     <div id="content" class="bodyContent" style="margin-bottom: 5%;">
-        <button onClick="openLink('hash=c4878fa45e9c79002721f24df1bcd3763edf5bfd');">Website</button>
-        <button onClick="openLink('hash=4dda680a48cef4c45482fb58ebb60f5eea4866f3');">GitHub</button>
-        <button onClick="openLink('hash=d4b7c0f478213aa67ea7fc5f6c8ea82864c06275');">Instagram</button>
-        <button onClick="openLink('hash=3a985f15cd658ae5be9eeeb1f42b14fa5b143ea9');">Twitter</button>
-        <button onClick="openLink('hash=77db44fec3253531a46879102ec061bb3bdce5f8');">TikTok</button>
-        <button onClick="openLink('hash=890353cc27c6f051142f51ecceb1518f0013ff9e');">Snapchat</button>
+        <button onClick="openLink('bdc5e0d16007f2cf0a3f97326d6b893d321b4412');">Website</button>
+        <button onClick="openLink('b5bb53db5bf97f06c25a6a4a3245185758729cbb');">GitHub</button>
+        <button onClick="openLink('f3682916e344a4bb1d2f3876b0c982dc21ed1e7c');">Instagram</button>
+        <button onClick="openLink('1f68288df129213401769062dda4e47a8d2855ea');">Twitter</button>
+        <button onClick="openLink('7f200f3199b14dfd8bab13cce249dfb8cce8152e');">TikTok</button>
+        <button onClick="openLink('c6ba1a521c6a53f8539451c390f5de6ff0639aee');">Snapchat</button>
         <button onClick="alert('TheFlyingRat#3387')">Discord</button>
-        <button onClick="openLink('hash=02ea4823353e76214920eac5aface7bf4616263d');">YouTube</button>
-        <button onClick="openLink('hash=a909bf08665b07e03f3a46b78fb8ed84de53d228');">Reddit</button>
-        <button onClick="openLink('hash=7dab521a63d0eae7dcac96e631ced983b33450ef');">Spotify</button>
+        <button onClick="openLink('6814b0db8c14608abdf2c07ceecc9319e291f447');">YouTube</button>
+        <button onClick="openLink('a332a1f3faa9babe366d3548dec39b56596c3f99');">Reddit</button>
+        <button onClick="openLink('10ac0f75dd254ead495118d422f996a8f5b879bc');">Spotify</button>
     </div>
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/css/normalize.min.css">
     <link rel="stylesheet" href="https://cdn.theflyingrat.com/assets/css/skeleton.min.css">
@@ -59,7 +59,7 @@
     <script>console.log("DOM loaded");</script>
     <script defer>
         function openLink(url) {
-            window.location.href = "https://api.theflyingrat.com/redir?" + url;
+            window.location.href = "https://api.theflyingrat.com/redir/" + url;
         }
         function showBody() {
             document.getElementById("html").style.display = "block";
